--- a/Default and Asset Correlation.ipynb
+++ b/Default and Asset Correlation.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -588,36 +588,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Pz(p,w,z):\n",
-    "    num = norm.ppf(p)-np.multiply(w,z)\n",
-    "    pG  = norm.cdf(np.divide(num,np.sqrt(1-w*w)))\n",
-    "    return pG\n",
-    "\n",
-    "def CMFz(z, Rho, p, N, K):\n",
-    "    pg  = Pz(p,Rho, z)    \n",
-    "    f   = comb(N,K)*np.power(pg,K)*np.power(1-pg,N-K)\n",
-    "    cmf = f        \n",
-    "    return cmf\n",
-    "\n",
-    "def logL(Rho_p, T, nVec, kVec):\n",
-    "    Rho  = Rho_p[0]\n",
-    "    p    = Rho_p[1]    \n",
-    "    L    = np.zeros(T)\n",
-    "\n",
-    "    for t in range(0,T):\n",
-    "        ss = np.array([CMFz(s, Rho, p, nVec[t], kVec[t]) for s in x])\n",
-    "        for i in range(0,size):            \n",
-    "            L[t] =  np.dot(ss,y)\n",
-    "    logL = -np.sum(np.log(L))\n",
-    "    return logL"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
@@ -655,6 +625,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Pz(p,w,z):\n",
+    "    num = norm.ppf(p)-np.multiply(w,z)\n",
+    "    pG  = norm.cdf(np.divide(num,np.sqrt(1-w*w)))\n",
+    "    return pG\n",
+    "\n",
+    "def CMFz(z, Rho, p, N, K):\n",
+    "    pg  = Pz(p,Rho, z)    \n",
+    "    f   = comb(N,K)*np.power(pg,K)*np.power(1-pg,N-K)\n",
+    "    cmf = f        \n",
+    "    return cmf\n",
+    "\n",
+    "def logL(Rho_p, T, nVec, kVec):\n",
+    "    Rho  = Rho_p[0]\n",
+    "    p    = Rho_p[1]    \n",
+    "    L    = np.zeros(T)\n",
+    "\n",
+    "    for t in range(0,T):\n",
+    "        ss = np.array([CMFz(s, Rho, p, nVec[t], kVec[t]) for s in x])\n",
+    "        \n",
+    "        #for i in range(0,size):            \n",
+    "        L[t] =  np.dot(ss,y)\n",
+    "    logL = -np.sum(np.log(L))\n",
+    "    return logL"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -670,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +782,7 @@
        "740.0467215389326"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,8 +829,8 @@
     "    L    = np.zeros(T)\n",
     "    for t in range(0,T):\n",
     "        ss = np.array([CMFzSterling(s, Rho, p, nVec[t], kVec[t]) for s in x])\n",
-    "        for i in range(0,size):            \n",
-    "            L[t] =  np.dot(ss,y)\n",
+    "        #for i in range(0,size):            \n",
+    "        L[t] =  np.dot(ss,y)\n",
     "    logL = -np.sum(np.log(L))\n",
     "    return logL"
    ]
@@ -843,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -872,6 +873,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "132.2487972586717\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(logLSterling([0.29139055, 0.04385974], 29, np.array(DefaultData.SpeculativeGrade_No), \\\n",
+    "                   np.array(DefaultData.SpeculativeGradeDefaults)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -889,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,15 +930,15 @@
     "    \n",
     "    for t in range(0,T):\n",
     "        ss = np.array([CMFzSterling2Factors(s, Rho1, p1, Rho2, p2, nVec1[t], kVec1[t], nVec2[t], kVec2[t]) for s in x])\n",
-    "        for i in range(0,size):            \n",
-    "            L[t] =  np.dot(ss,y)\n",
+    "        #for i in range(0,size):            \n",
+    "        L[t] =  np.dot(ss,y)\n",
     "    logL = -np.sum(np.log(L))\n",
     "    return logL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -956,6 +975,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "186.53347032923807\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(logLSterling2Factors([0.20353734, 0.0012931 , 0.27907251, 0.04347081], 29, \\\n",
+    "                           np.array(DefaultData.IG_No), np.array(DefaultData.IGDefaults),\\\n",
+    "                           np.array(DefaultData.SpeculativeGrade_No), \\\n",
+    "                   np.array(DefaultData.SpeculativeGradeDefaults)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -964,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1229,29 +1268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import timeit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.24 s ± 32.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit (logLquad(Rho_p, 29, np.array(DefaultData.IG_No), np.array(DefaultData.IGDefaults)))"
    ]
   },
   {
@@ -1263,7 +1285,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "765 ms ± 57.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.41 s ± 61.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit (logLquad(Rho_p, 29, np.array(DefaultData.IG_No), np.array(DefaultData.IGDefaults)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "861 ms ± 85.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1287,14 +1326,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1min 40s ± 3.83 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1min 43s ± 2.51 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1304,15 +1343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 89.43 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "13min 27s ± 30min 30s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1min 4s ± 4.6 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
